se agregó archivo svg y se actualizó html y css

--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
         </div>
 
         <address class="header_contact">
+          <svg class="header_icon">
+            <use href="./images/svg/sprite.svg#mail"></use>
+          </svg>
           <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <svg class="header_icon_tel">
+            <use href="./images/svg/sprite.svg#tel"></use>
+          </svg>
           <a class="tel" href="tel:+525555296000">+52 55 5529 6000</a>
         </address>
       </div>
@@ -68,8 +74,8 @@
 
               <li class="benefit">
                 <div class="benefit_box_sup">
-                  <svg>
-                    <use href=""></use>
+                  <svg class="benefit_icon">
+                    <use href="./images/svg/sprite.svg#watch"></use>
                   </svg>
                 </div>
 
@@ -83,8 +89,8 @@
 
               <li class="benefit">
                 <div class="benefit_box_sup">
-                  <svg>
-                    <use href=""></use>
+                  <svg class="benefit_icon">
+                    <use href="./images/svg/sprite.svg#graphics"></use>
                   </svg>
                 </div>
 
@@ -97,8 +103,8 @@
 
               <li class="benefit">
                 <div class="benefit_box_sup">
-                  <svg>
-                    <use href=""></use>
+                  <svg class="benefit_icon">
+                    <use href="./images/svg/sprite.svg#astronaut"></use>
                   </svg>
                 </div>
 
@@ -123,6 +129,7 @@
                   width="373.16px"
                   height="323.7px"
                 />
+                <div><p></p></div>
               </li>
 
               <li>
@@ -132,6 +139,7 @@
                   width="373.16px"
                   height="323.7px"
                 />
+                <div><p></p></div>
               </li>
 
               <li>
@@ -141,6 +149,7 @@
                   width="373.16px"
                   height="323.7px"
                 />
+                <div><p></p></div>
               </li>
             </ul>
           </div>
@@ -151,7 +160,7 @@
             <!-- equipo -->
             <h2>Nuestro equipo</h2>
             <ul class="team">
-              <li>
+              <li class="employee">
                 <img
                   src="./images/employee1.jpg"
                   alt="tarjeta del equipo 1"
@@ -160,6 +169,42 @@
                 />
                 <h3>Andrés Cubo</h3>
                 <p>Diseñador de Productos</p>
+
+                <div class="employee_social_network">
+                  <ul class="icons_social_network">
+                    <li class="icon_social_network">
+                      <a href="#">
+                        <svg class="icon_instagram">
+                          <use href="./images/svg/sprite.svg#instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+
+                    <li class="icon_social_network">
+                      <a href="#">
+                        <svg class="icon_twitter">
+                          <use href="./images/svg/sprite.svg#twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+
+                    <li class="icon_social_network">
+                      <a href="#">
+                        <svg class="icon_facebook">
+                          <use href="./images/svg/sprite.svg#facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+
+                    <li class="icon_social_network">
+                      <a href="#">
+                        <svg class="icon_linkedin">
+                          <use href="./images/svg/sprite.svg#linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </li>
 
               <li>
@@ -171,6 +216,42 @@
                 />
                 <h3>Carla Palacios</h3>
                 <p>Desarrolladora Frontend</p>
+
+                <div class="employee_social_network">
+                  <ul class="icons_social_network">
+                    <li class="icon_social_network">
+                      <a href="#">
+                        <svg class="icon_instagram">
+                          <use href="./images/svg/sprite.svg#instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+
+                    <li class="icon_social_network">
+                      <a href="#">
+                        <svg class="icon_twitter">
+                          <use href="./images/svg/sprite.svg#twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+
+                    <li class="icon_social_network">
+                      <a href="#">
+                        <svg class="icon_facebook">
+                          <use href="./images/svg/sprite.svg#facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+
+                    <li class="icon_social_network">
+                      <a href="#">
+                        <svg class="icon_linkedin">
+                          <use href="./images/svg/sprite.svg#linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </li>
 
               <li>
@@ -182,6 +263,42 @@
                 />
                 <h3>Mario Dorado</h3>
                 <p>Marketing</p>
+
+                <div class="employee_social_network">
+                  <ul class="icons_social_network">
+                    <li class="icon_social_network">
+                      <a href="#">
+                        <svg class="icon_instagram">
+                          <use href="./images/svg/sprite.svg#instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+
+                    <li class="icon_social_network">
+                      <a href="#">
+                        <svg class="icon_twitter">
+                          <use href="./images/svg/sprite.svg#twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+
+                    <li class="icon_social_network">
+                      <a href="#">
+                        <svg class="icon_facebook">
+                          <use href="./images/svg/sprite.svg#facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+
+                    <li class="icon_social_network">
+                      <a href="#">
+                        <svg class="icon_linkedin">
+                          <use href="./images/svg/sprite.svg#linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </li>
 
               <li>
@@ -193,28 +310,150 @@
                 />
                 <h3>Pablo Mijangos</h3>
                 <p>Diseñador IU</p>
+
+                <div class="employee_social_network">
+                  <ul class="icons_social_network">
+                    <li class="icon_social_network">
+                      <a href="#">
+                        <svg class="icon_instagram">
+                          <use href="./images/svg/sprite.svg#instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+
+                    <li class="icon_social_network">
+                      <a href="#">
+                        <svg class="icon_twitter">
+                          <use href="./images/svg/sprite.svg#twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+
+                    <li class="icon_social_network">
+                      <a href="#">
+                        <svg class="icon_facebook">
+                          <use href="./images/svg/sprite.svg#facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+
+                    <li class="icon_social_network">
+                      <a href="#">
+                        <svg class="icon_linkedin">
+                          <use href="./images/svg/sprite.svg#linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </li>
             </ul>
           </div>
         </section>
 
         <section class="regular_customers">
-          <div class="container">
+          <div class="container customers_container">
             <h2>Clientes regulares</h2>
+            <ul class="customers">
+              <li class="customer">
+                <a href="#">
+                  <svg  class="icon">
+                    <use href="./images/svg/sprite.svg#logo_customer1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="customer">
+                <a href="#">
+                  <svg  class="icon">
+                    <use href="./images/svg/sprite.svg#logo_customer2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="customer">
+                <a href="#">
+                  <svg  class="icon">
+                    <use href="./images/svg/sprite.svg#logo_customer3"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="customer">
+                <a href="#">
+                  <svg  class="icon">
+                    <use href="./images/svg/sprite.svg#logo_customer4"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="customer">
+                <a href="#">
+                  <svg  class="icon">
+                    <use href="./images/svg/sprite.svg#logo_customer5"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="customer">
+                <a href="#">
+                  <svg class="icon">
+                    <use href="./images/svg/sprite.svg#logo_customer6"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </div>
         </section>
       </main>
 
       <footer>
-        <div class="container">
-          <a class="logo" href="#">WebStudio</a>
-          <address class="footer_address">
-            <ul>
-              <li>Calz. Ticomán 500, Ciudad de México, CDMX, México</li>
-              <li><a href="mailto:info@example.com">info@example.com</a></li>
-              <li><a href="tel:+525555296000">+52 55 5529 6000</a></li>
+        <div class="container footer_container">
+          <div class="footer_logo_and_address">
+            <a class="logo" href="#">WebStudio</a>
+
+            <address class="footer_address">
+              <ul>
+                <li>Calz. Ticomán 500, Ciudad de México, CDMX, México</li>
+                <li><a href="mailto:info@example.com">info@example.com</a></li>
+                <li><a href="tel:+525555296000">+52 55 5529 6000</a></li>
+              </ul>
+            </address>
+          </div>
+
+          <section class="footer_social_netwoks">
+            <h3>ENCUENTRANOS EN</h3>
+
+            <ul class="icons_social_network">
+              <li class="icon_social_network">
+                <a href="#">
+                  <svg class="icon_instagram">
+                    <use href="./images/svg/sprite.svg#instagram"></use>
+                  </svg>
+                </a>
+              </li>
+
+              <li class="icon_social_network">
+                <a href="#">
+                  <svg class="icon_twitter">
+                    <use href="./images/svg/sprite.svg#twitter"></use>
+                  </svg>
+                </a>
+              </li>
+
+              <li class="icon_social_network">
+                <a href="#">
+                  <svg class="icon_facebook">
+                    <use href="./images/svg/sprite.svg#facebook"></use>
+                  </svg>
+                </a>
+              </li>
+
+              <li class="icon_social_network">
+                <a href="#">
+                  <svg class="icon_linkedin">
+                    <use href="./images/svg/sprite.svg#linkedin"></use>
+                  </svg>
+                </a>
+              </li>
             </ul>
-          </address>
+          </section>
+
         </div>
       </footer>
   </body>
