--- a/portafolio.html
+++ b/portafolio.html
@@ -32,7 +32,13 @@
         </div>
 
         <address class="header_contact">
+          <svg class="header_icon">
+            <use href="./images/svg/sprite.svg#mail"></use>
+          </svg>
           <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <svg class="header_icon_tel">
+            <use href="./images/svg/sprite.svg#tel"></use>
+          </svg>
           <a class="tel" href="tel:+525555296000">+52 55 5529 6000</a>
         </address>
       </div>
@@ -55,108 +61,88 @@
             <ul class="projects">
               <li class="project">
                 <a href="#">
-                  <div class="footer_card">
-                    <img src="./images/tecnoduck.jpg" alt="" width="370px" height="294px"/>
-                    <div class="text_card">
-                      <h3>Tecnoduck</h3>
-                      <p>Sitio-web</p>
-                    </div>
+                  <img src="./images/tecnoduck.jpg" alt="" width="370px" height="294px"/>
+                  <div class="project_text">
+                    <h3>Tecnoduck</h3>
+                    <p>Sitio-web</p>
+                  </div>
+                </a>
+              </li>
+              <li class="project">
+                <a href="#">
+                  <img src="./images/poster-new-orleans.jpg" alt="" width="370px" height="294px"/>
+                  <div class="project_text">
+                    <h3>Póster New Orleans vs Golden Stars</h3>
+                    <p>Diseño</p>
+                  </div>
+                </a>
+              </li>
+              <li class="project">
+                <a href="#">
+                  <img src="./images/seafood.jpg" alt="" width="370px" height="294px"/>
+                  <div class="project_text">
+                    <h3>Restaurante Seafood</h3>
+                    <p>Aplicaciones</p>
                   </div>
                 </a>
               </li>
 
               <li class="project">
                 <a href="#">
-                  <div class="footer_card">
-                    <img src="./images/poster-new-orleans.jpg" alt="" width="370px" height="294px"/>
-                    <div class="text_card">
-                      <h3>Póster New Orleans vs Golden Stars</h3>
-                      <p>Diseño</p>
-                    </div>
+                  <img src="./images/project-prime.jpg" alt="" width="370px" height="294px"/>
+                  <div class="project_text">
+                    <h3>Proyecto Prime</h3>
+                    <p>Marketing</p>
                   </div>
                 </a>
               </li>
 
               <li class="project">
                 <a href="#">
-                  <div class="footer_card">
-                    <img src="./images/seafood.jpg" alt="" width="370px" height="294px"/>
-                    <div class="text_card">
-                      <h3>Restaurante Seafood</h3>
-                      <p>Aplicaciones</p>
-                    </div>
+                  <img src="./images/project-boxes.jpg" alt="" width="370px" height="294px"/>
+                  <div class="project_text">
+                    <h3>Proyecto Cajas</h3>
+                    <p>Aplicaciones</p>
                   </div>
                 </a>
               </li>
 
               <li class="project">
                 <a href="#">
-                  <div class="footer_card">
-                    <img src="./images/project-prime.jpg" alt="" width="370px" height="294px"/>
-                    <div class="text_card">
-                      <h3>Proyecto Prime</h3>
-                      <p>Marketing</p>
-                    </div>
+                  <img src="./images/inspiration-has-no-limit.jpg" alt="" width="370px" height="294px"/>
+                  <div class="project_text">
+                    <h3>La inspiración no tiene límites</h3>
+                    <p>Sitio web</p>
                   </div>
                 </a>
               </li>
 
               <li class="project">
                 <a href="#">
-                  <div class="footer_card">
-                    <img src="./images/project-boxes.jpg" alt="" width="370px" height="294px"/>
-                    <div class="text_card">
-                      <h3>Proyecto Cajas</h3>
-                      <p>Aplicaciones</p>
-                    </div>
+                  <img src="./images/limited-edition.jpg" alt="" width="370px" height="294px"/>
+                  <div class="project_text">
+                    <h3>Edición Limitada</h3>
+                    <p>Diseño</p>
                   </div>
                 </a>
               </li>
 
               <li class="project">
                 <a href="#">
-                  <div class="footer_card">
-                    <img src="./images/inspiration-has-no-limit.jpg" alt="" width="370px" height="294px"/>
-                    <div class="text_card">
-                      <h3>La inspiración no tiene límites</h3>
-                      <p>Sitio web</p>
-                    </div>
+                  <img src="./images/project-lab.jpg" alt="" width="370px" height="294px"/>
+                  <div class="project_text">
+                    <h3>Proyecto LAB</h3>
+                    <p>Marketing</p>
                   </div>
                 </a>
               </li>
 
               <li class="project">
                 <a href="#">
-                  <div class="footer_card">
-                    <img src="./images/limited-edition.jpg" alt="" width="370px" height="294px"/>
-                    <div class="text_card">
-                      <h3>Edición Limitada</h3>
-                      <p>Diseño</p>
-                    </div>
-                  </div>
-                </a>
-              </li>
-
-              <li class="project">
-                <a href="#">
-                  <div class="footer_card">
-                    <img src="./images/project-lab.jpg" alt="" width="370px" height="294px"/>
-                    <div class="text_card">
-                      <h3>Proyecto LAB</h3>
-                      <p>Marketing</p>
-                    </div>
-                  </div>
-                </a>
-              </li>
-
-              <li class="project">
-                <a href="#">
-                  <div class="footer_card">
-                    <img src="./images/growing-business.jpg" alt="" width="370px" height="294px"/>
-                    <div class="text_card">
-                      <h3>Negocio en Crecimiento</h3>
-                      <p>Aplicaciones</p>
-                    </div>
+                  <img src="./images/growing-business.jpg" alt="" width="370px" height="294px"/>
+                  <div class="project_text">
+                    <h3>Negocio en Crecimiento</h3>
+                    <p>Aplicaciones</p>
                   </div>
                 </a>
               </li>
@@ -176,6 +162,43 @@
             <li><a href="tel:+525555296000">+52 55 5529 6000</a></li>
           </ul>
         </address>
+
+        <section class="footer_social_netwoks">
+          <h3>ENCUENTRANOS EN</h3>
+          <ul>
+            <li class="icon_social_network">
+              <a href="#">
+                <svg class="icon_intagram">
+                  <use></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="icon_social_network">
+              <a href="#">
+                <svg class="icon_twitter">
+                  <use></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="icon_social_network">
+              <a href="#">
+                <svg class="icon_facebook">
+                  <use></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="icon_social_network">
+              <a href="#">
+                <svg class="icon_linkedin">
+                  <use></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </section>
       </div>
     </footer>
   </body>
