--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                   <ul class="icons_social_network">
                     <li class="icon_social_network">
                       <a href="#">
-                        <svg class="icon_instagram">
+                        <svg class="icon">
                           <use href="./images/svg/sprite.svg#instagram"></use>
                         </svg>
                       </a>
@@ -182,7 +182,7 @@
 
                     <li class="icon_social_network">
                       <a href="#">
-                        <svg class="icon_twitter">
+                        <svg class="icon">
                           <use href="./images/svg/sprite.svg#twitter"></use>
                         </svg>
                       </a>
@@ -190,7 +190,7 @@
 
                     <li class="icon_social_network">
                       <a href="#">
-                        <svg class="icon_facebook">
+                        <svg class="icon">
                           <use href="./images/svg/sprite.svg#facebook"></use>
                         </svg>
                       </a>
@@ -198,7 +198,7 @@
 
                     <li class="icon_social_network">
                       <a href="#">
-                        <svg class="icon_linkedin">
+                        <svg class="icon">
                           <use href="./images/svg/sprite.svg#linkedin"></use>
                         </svg>
                       </a>
@@ -221,7 +221,7 @@
                   <ul class="icons_social_network">
                     <li class="icon_social_network">
                       <a href="#">
-                        <svg class="icon_instagram">
+                        <svg class="icon">
                           <use href="./images/svg/sprite.svg#instagram"></use>
                         </svg>
                       </a>
@@ -229,7 +229,7 @@
 
                     <li class="icon_social_network">
                       <a href="#">
-                        <svg class="icon_twitter">
+                        <svg class="icon">
                           <use href="./images/svg/sprite.svg#twitter"></use>
                         </svg>
                       </a>
@@ -237,7 +237,7 @@
 
                     <li class="icon_social_network">
                       <a href="#">
-                        <svg class="icon_facebook">
+                        <svg class="icon">
                           <use href="./images/svg/sprite.svg#facebook"></use>
                         </svg>
                       </a>
@@ -245,7 +245,7 @@
 
                     <li class="icon_social_network">
                       <a href="#">
-                        <svg class="icon_linkedin">
+                        <svg class="icon">
                           <use href="./images/svg/sprite.svg#linkedin"></use>
                         </svg>
                       </a>
@@ -268,7 +268,7 @@
                   <ul class="icons_social_network">
                     <li class="icon_social_network">
                       <a href="#">
-                        <svg class="icon_instagram">
+                        <svg class="icon">
                           <use href="./images/svg/sprite.svg#instagram"></use>
                         </svg>
                       </a>
@@ -276,7 +276,7 @@
 
                     <li class="icon_social_network">
                       <a href="#">
-                        <svg class="icon_twitter">
+                        <svg class="icon">
                           <use href="./images/svg/sprite.svg#twitter"></use>
                         </svg>
                       </a>
@@ -284,7 +284,7 @@
 
                     <li class="icon_social_network">
                       <a href="#">
-                        <svg class="icon_facebook">
+                        <svg class="icon">
                           <use href="./images/svg/sprite.svg#facebook"></use>
                         </svg>
                       </a>
@@ -292,7 +292,7 @@
 
                     <li class="icon_social_network">
                       <a href="#">
-                        <svg class="icon_linkedin">
+                        <svg class="icon">
                           <use href="./images/svg/sprite.svg#linkedin"></use>
                         </svg>
                       </a>
@@ -315,7 +315,7 @@
                   <ul class="icons_social_network">
                     <li class="icon_social_network">
                       <a href="#">
-                        <svg class="icon_instagram">
+                        <svg class="icon">
                           <use href="./images/svg/sprite.svg#instagram"></use>
                         </svg>
                       </a>
@@ -323,7 +323,7 @@
 
                     <li class="icon_social_network">
                       <a href="#">
-                        <svg class="icon_twitter">
+                        <svg class="icon">
                           <use href="./images/svg/sprite.svg#twitter"></use>
                         </svg>
                       </a>
@@ -331,7 +331,7 @@
 
                     <li class="icon_social_network">
                       <a href="#">
-                        <svg class="icon_facebook">
+                        <svg class="icon">
                           <use href="./images/svg/sprite.svg#facebook"></use>
                         </svg>
                       </a>
@@ -339,7 +339,7 @@
 
                     <li class="icon_social_network">
                       <a href="#">
-                        <svg class="icon_linkedin">
+                        <svg class="icon">
                           <use href="./images/svg/sprite.svg#linkedin"></use>
                         </svg>
                       </a>
@@ -357,42 +357,42 @@
             <ul class="customers">
               <li class="customer">
                 <a href="#">
-                  <svg  class="icon">
+                  <svg  class="icon_customer">
                     <use href="./images/svg/sprite.svg#logo_customer1"></use>
                   </svg>
                 </a>
               </li>
               <li class="customer">
                 <a href="#">
-                  <svg  class="icon">
+                  <svg  class="icon_customer">
                     <use href="./images/svg/sprite.svg#logo_customer2"></use>
                   </svg>
                 </a>
               </li>
               <li class="customer">
                 <a href="#">
-                  <svg  class="icon">
+                  <svg  class="icon_customer">
                     <use href="./images/svg/sprite.svg#logo_customer3"></use>
                   </svg>
                 </a>
               </li>
               <li class="customer">
                 <a href="#">
-                  <svg  class="icon">
+                  <svg  class="icon_customer">
                     <use href="./images/svg/sprite.svg#logo_customer4"></use>
                   </svg>
                 </a>
               </li>
               <li class="customer">
                 <a href="#">
-                  <svg  class="icon">
+                  <svg  class="icon_customer">
                     <use href="./images/svg/sprite.svg#logo_customer5"></use>
                   </svg>
                 </a>
               </li>
               <li class="customer">
                 <a href="#">
-                  <svg class="icon">
+                  <svg class="icon_customer">
                     <use href="./images/svg/sprite.svg#logo_customer6"></use>
                   </svg>
                 </a>
@@ -422,7 +422,7 @@
             <ul class="icons_social_network">
               <li class="icon_social_network">
                 <a href="#">
-                  <svg class="icon_instagram">
+                  <svg class="icon">
                     <use href="./images/svg/sprite.svg#instagram"></use>
                   </svg>
                 </a>
@@ -430,7 +430,7 @@
 
               <li class="icon_social_network">
                 <a href="#">
-                  <svg class="icon_twitter">
+                  <svg class="icon">
                     <use href="./images/svg/sprite.svg#twitter"></use>
                   </svg>
                 </a>
@@ -438,7 +438,7 @@
 
               <li class="icon_social_network">
                 <a href="#">
-                  <svg class="icon_facebook">
+                  <svg class="icon">
                     <use href="./images/svg/sprite.svg#facebook"></use>
                   </svg>
                 </a>
@@ -446,7 +446,7 @@
 
               <li class="icon_social_network">
                 <a href="#">
-                  <svg class="icon_linkedin">
+                  <svg class="icon">
                     <use href="./images/svg/sprite.svg#linkedin"></use>
                   </svg>
                 </a>
