--- a/portafolio.html
+++ b/portafolio.html
@@ -152,53 +152,59 @@
       </section>
     </main>
 
+
     <footer>
-      <div class="container">
-        <a class="logo" href="#">WebStudio</a>
-        <address class="footer_address">
-          <ul>
-            <li>Calz. Ticomán 500, Ciudad de México, CDMX, México</li>
-            <li><a href="mailto:info@example.com">info@example.com</a></li>
-            <li><a href="tel:+525555296000">+52 55 5529 6000</a></li>
-          </ul>
-        </address>
+      <div class="container footer_container">
+        <div class="footer_logo_and_address">
+          <a class="logo" href="#">WebStudio</a>
+
+          <address class="footer_address">
+            <ul>
+              <li>Calz. Ticomán 500, Ciudad de México, CDMX, México</li>
+              <li><a href="mailto:info@example.com">info@example.com</a></li>
+              <li><a href="tel:+525555296000">+52 55 5529 6000</a></li>
+            </ul>
+          </address>
+        </div>
 
         <section class="footer_social_netwoks">
           <h3>ENCUENTRANOS EN</h3>
-          <ul>
+
+          <ul class="icons_social_network">
             <li class="icon_social_network">
               <a href="#">
-                <svg class="icon_intagram">
-                  <use></use>
+                <svg class="icon">
+                  <use href="./images/svg/sprite.svg#instagram"></use>
                 </svg>
               </a>
             </li>
 
             <li class="icon_social_network">
               <a href="#">
-                <svg class="icon_twitter">
-                  <use></use>
+                <svg class="icon">
+                  <use href="./images/svg/sprite.svg#twitter"></use>
                 </svg>
               </a>
             </li>
 
             <li class="icon_social_network">
               <a href="#">
-                <svg class="icon_facebook">
-                  <use></use>
+                <svg class="icon">
+                  <use href="./images/svg/sprite.svg#facebook"></use>
                 </svg>
               </a>
             </li>
 
             <li class="icon_social_network">
               <a href="#">
-                <svg class="icon_linkedin">
-                  <use></use>
+                <svg class="icon">
+                  <use href="./images/svg/sprite.svg#linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
         </section>
+
       </div>
     </footer>
   </body>
