--- a/index.html
+++ b/index.html
@@ -121,15 +121,15 @@
         <section class="section">
           <div class="container what_do_we_do">
             <h2>A qué nos dedicamos</h2>
-            <ul class="elements">
-              <li>
+            <ul class="what_do_we_do_images">
+              <li class="what_do_we_do_image">
                 <img
                   src="./images/box1.jpg"
                   alt="caja1"
                   width="373.16px"
                   height="323.7px"
                 />
-                <div><p></p></div>
+                <div class="what_do_we_do_image_description"><p>APLICACIONES DE ESCRITORIO</p></div>
               </li>
 
               <li>
@@ -139,9 +139,8 @@
                   width="373.16px"
                   height="323.7px"
                 />
-                <div><p></p></div>
+                <div class="what_do_we_do_image_description"><p>APLICACIONES MOVILES</p></div>              
               </li>
-
               <li>
                 <img
                   src="./images/box3.jpg"
@@ -149,7 +148,7 @@
                   width="373.16px"
                   height="323.7px"
                 />
-                <div><p></p></div>
+                <div class="what_do_we_do_image_description"><p>SOLUCIONES DE DISEÑO</p></div>
               </li>
             </ul>
           </div>
